--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,21 @@
-
-
-.home{
-    background-color: #FFF7F1;
-}
+.app {
+    display: flex;
+  }
+  
+  .sidebar {
+    width: 250px;
+    background-color: #f8d7da;
+    padding: 20px;
+  }
+  
+  .main-content {
+    flex-grow: 1;
+    padding: 20px;
+  }
+  
+  .meters-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  
