--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -1,7 +1,7 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+ */
 
 .sidebar {
     background-color: #FFB7C1; 
@@ -15,3 +15,13 @@
     gap: 1%; 
     font-family: "Poppins", sans-serif;
 }
+
+
+  
+  .sidebar h3 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 18px;
+    margin: 10px 0;
+  }
