--- a/final-frontend/src/Dashboard.css
+++ b/final-frontend/src/Dashboard.css
@@ -177,3 +177,49 @@
     font-size: large;
 
 }
+
+
+/* Popup Styles */
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .popup-content {
+    background-color: #fff;
+    padding: 20px 30px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .popup-text {
+    font-size: 18px;
+    font-weight: bold;
+    color: #FF4C4C;
+  }
+  
+  .popup-close {
+    background-color: #FF4C4C;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 16px;
+    cursor: pointer;
+    margin-top: 15px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .popup-close:hover {
+    background-color: #d43a3a;
+  }
+  
